# RedBelt

./: CMakeLists.txt  README.md
AirportCounter/: CMakeLists.txt  airport_counter.cpp
BadMacro/: CMakeLists.txt  print_values.cpp
ComparatorGenerator/: CMakeLists.txt  airline_ticket.h  sort_by.cpp
Deque/: CMakeLists.txt  Deque.h  main.cpp
EBook/: CMakeLists.txt  slow.cpp
Expresses/: CMakeLists.txt  slow.cpp
GroupHeavyStrings/: CMakeLists.txt  ground_heavy_strings.cpp
HotelBookSystem/: CMakeLists.txt  main.cpp
JosephsPermutation/: CMakeLists.txt  josephs_permutation.cpp
Learner/: CMakeLists.txt  learner.cpp
LinkedList/: CMakeLists.txt  linked_list.cpp
MacrosLog/: CMakeLists.txt  log.cpp
MatrixSum/: CMakeLists.txt  matrix_sum.cpp
MaxElementIf/: CMakeLists.txt  main.cpp
MergeSort3/: CMakeLists.txt  merge_sort_3.cpp
ObjectPool/: CMakeLists.txt  object_pool.cpp
PaginatorTemplate/: CMakeLists.txt  paginator.cpp
PriorityCollection/: CMakeLists.txt  priority_collection.cpp
Profiler/: CMakeLists.txt
SimpleVector/: CMakeLists.txt  simple_vector.cpp  simple_vector.h
SimpleVectorCopyAssignment/: CMakeLists.txt  simple_vector.h  simple_vector_copy_assignment.cpp
SimpleVectorMoveSemantics/: CMakeLists.txt  simple_vector_2.cpp  simple_vector_2.h
SortStudents/: CMakeLists.txt  sort_students.cpp  student.h
SplitIntoSentences/: CMakeLists.txt  split_into_sentences.cpp
Sportsmen/: CMakeLists.txt  main.cpp
StackVector/: CMakeLists.txt  stack_vector.cpp  stack_vector.h
SwapSortCopy/: CMakeLists.txt  swap_sort_copy.cpp
Table/: CMakeLists.txt  (+1 more)
(+14 files in other folders)
