cmake_minimum_required(VERSION 3.27)
project(RedBelt)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror")

add_subdirectory(MaxElementIf)
add_subdirectory(MacrosLog)
add_subdirectory(ComparatorGenerator)
add_subdirectory(UpdateFieldMacro)
add_subdirectory(BadMacro)
add_subdirectory(UniqId)
add_subdirectory(Table)
add_subdirectory(Deque)
add_subdirectory(PaginatorTemplate)
add_subdirectory(Profiler)
add_subdirectory(SortStudents)
add_subdirectory(Learner)
add_subdirectory(Expresses)
add_subdirectory(EBook)
add_subdirectory(HotelBookSystem)
add_subdirectory(ObjectPool)
add_subdirectory(SwapSortCopy)
add_subdirectory(SimpleVector)
add_subdirectory(LinkedList)
add_subdirectory(Sportsmen)
add_subdirectory(StackVector)
add_subdirectory(Translator)
add_subdirectory(AirportCounter)
add_subdirectory(TextEditor)
add_subdirectory(WebServerStats)
add_subdirectory(JosephsPermutation)